--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.x' 
+          dotnet-version: '8' 
 
       - name: Install dotnet format tool
         run: dotnet tool install --global dotnet-format
