trying to get github actions to work

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
       - name: Run dotnet format
-        run: dotnet format ECB_Ecreo_bachelorprojekt/EC-Billing/EC-Billing.csproj --verify-no-changes
+        run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes
 
       - name: Fail on unformatted code
         if: failure()
