--- a/EC-Billing/EC-Billing.csproj
+++ b/EC-Billing/EC-Billing.csproj
@@ -7,5 +7,9 @@
     <RootNamespace>EC-Billing</RootNamespace>
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
   </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="xunit" Version="2" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16" />
+	</ItemGroup>
 
 </Project>
