changing yaml file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8'
+          dotnet-version: '8' 
 
       - name: Install dotnet format
         run: dotnet tool install --global dotnet-format
@@ -30,20 +30,11 @@ jobs:
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
       - name: Run dotnet format
-        id: format-check
-        run: |
-          dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes || echo "Formatting issues detected"
-        continue-on-error: true
+        run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes
 
-      - name: Show formatting issues
-        if: steps.format-check.outcome == 'failure'
-        run: |
-          echo "Formatting issues found! Please run 'dotnet format' locally to fix them."
-          dotnet format EC-Billing/EC-Billing.csproj
-          
       - name: Fail on unformatted code
-        if: steps.format-check.outcome == 'failure'
-        run: exit 1
+        if: failure()
+        run: echo "Code formatting issues found. Please run 'dotnet format' locally and commit the changes."
 
       - name: Restore Dependencies
         run: dotnet restore EC-Billing/EC-Billing.csproj
@@ -53,3 +44,4 @@ jobs:
 
       - name: Run Tests
         run: dotnet test EC-Billing/EC-Billing.csproj --no-restore --logger "console;verbosity=detailed"
+
