changing yaml file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,11 @@ jobs:
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
       - name: Run dotnet format
-        run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes --diagnostics
+        run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes --verbosity diagnostic --include whitespace
+
+      - name: Show detailed formatting issues
+        if: failure()
+        run: dotnet format EC-Billing/EC-Billing.csproj
 
       - name: Fail on unformatted code
         if: failure()
