--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes --verbosity diagnostic
 
       - name: Run dotnet format on solution (.sln)
-        run: dotnet format EC-Billing.sln --verify-no-changes --verbosity diagnostic
+        run: dotnet format EC-Billing/EC-Billing.sln --verify-no-changes --verbosity diagnostic
 
       - name: Fail on unformatted code
         if: failure()
