changing yaml file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Run dotnet format
         run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes --verbosity diagnostic
 
+      - name: Setup PATH for .NET tools
+        run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+
       - name: Run dotnet format on solution (.sln)
         run: dotnet format EC-Billing/EC-Billing.sln --verify-no-changes --verbosity diagnostic
 
