changes to setup

--- a/EC-Billing/EC-Billing.csproj
+++ b/EC-Billing/EC-Billing.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>EC-Billing</RootNamespace>
     <AssemblyName>$(AssemblyName.Replace(' ', '_'))</AssemblyName>
+	<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="xunit" Version="2.9.2" />
