--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,10 @@ jobs:
         run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
       - name: Run dotnet format
-        run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes --verbosity diagnostic
+        run: dotnet format EC-Billing/EC-Billing.csproj --verify-no-changes --verbosity diagnostic || echo "Error in formatting EC-Billing.csproj"
 
       - name: Run dotnet format on solution (.sln)
-        run: dotnet format demo.sln --verify-no-changes --verbosity diagnostic
+        run: dotnet format demo.sln --verify-no-changes --verbosity diagnostic || echo "Error in formatting demo.sln"
 
       - name: Fail on unformatted code
         if: failure()
