getting errors to show in github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,10 +40,6 @@ jobs:
         if: failure()
         run: echo "Code formatting issues found. Please run 'dotnet format' locally and commit the changes."
           echo "Formatted Errors:"
-          if [ -f format-output.log ]; then
-            cat format-output.log
-          fi
-          if [ -f format-output-sln.log ]; then
-            cat format-output-sln.log
-          fi
+          echo "${{ format-output.log }}"
+          echo "${{ format-output-sln.log  }}"
 
