--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,6 @@ jobs:
         if: failure()
         run: echo "Code formatting issues found. Please run 'dotnet format' locally and commit the changes."
           echo "Formatted Errors:"
-          echo "${{ format-output.log }}"
-          echo "${{ format-output-sln.log  }}"
+          echo "${{ format-code.outputs.error }}"
+          echo "${{ format-sln.outputs.error }}"
 
