--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,6 @@ jobs:
         if: failure()
         run: echo "Code formatting issues found. Please run 'dotnet format' locally and commit the changes."
           echo "Formatted Errors:"
-          echo "${{ steps.format-code.outputs.error }}"
-          echo "${{ steps.format-sln.outputs.error }}"
+          steps.format-code.outputs.error 
+          steps.format-sln.outputs.error }
 
