--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,21 +35,10 @@ jobs:
       - name: Run dotnet format on solution (.sln)
         run: dotnet format demo.sln --verify-no-changes --verbosity diagnostic > format-output-sln.log 
 
-
       - name: Fail on unformatted code
         if: failure()
-        run: 
-          if [[ -s format-output.log ]]; then
-            echo "Code formatting issues found in EC-Billing.csproj:"
-            cat format-output.log
-            echo "Formatting errors detected in EC-Billing.csproj."
-          
-          if [[ -s format-output-sln.log ]]; then
-            echo "Code formatting issues found in demo.sln:"
-            cat format-output-sln.log
-            echo "Formatting errors detected in demo.sln."
-
-          if [[ -s format-output.log || -s format-output-sln.log ]]; then
-            echo "Please run 'dotnet format' locally and commit the changes."
-            exit 1
+        run: echo "Code formatting issues found. Please run 'dotnet format' locally and commit the changes."
+          echo "Formatted Errors:"
+          echo "${{ steps.format-output.log }}"
+          echo "${{ steps.format-output-sln.log }}"
 
