adding yaml file

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,25 +1,22 @@
 name: DB_CON_SECRETS
 
 on:
-  push:
-    branches:
-      - '*' 
+  workflow_dispatch:  # Allows manual run for testing
 
 jobs:
-  build:
+  check-secret:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out the code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Set up .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8'
-
-      - name: Run EF Core Migrations
+      - name: Verify Secret Existence
         env:
           DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
         run: |
-          dotnet ef database update
+          if [ -z "$DB_CONNECTION_STRING" ]; then
+            echo "DB_CONNECTION_STRING is not set."
+          else
+            echo "DB_CONNECTION_STRING is set correctly."
+          fi
