--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
       - name: Check out the code
-        uses: actions/checkout@latest
+        uses: actions/checkout@v4
 
       - name: Verify Secret Existence
         env:
