Run EF core migrations on push

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,22 +1,37 @@
-name: DB_CON_SECRETS
+name: Run EF Core Migrations
 
 on:
-  workflow_dispatch:  # Allows manual run for testing
+  push:
+    branches:
+      - '*'  
 
 jobs:
-  check-secret:
+  run-migrations:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out the code
         uses: actions/checkout@v4
 
-      - name: Verify Secret Existence
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8' 
+
+      - name: Install EF Core CLI tools
+        run: dotnet tool install --global dotnet-ef
+
+      - name: Add .dotnet tools to PATH
+        run: echo "::add-path::~/.dotnet/tools"
+
+      - name: Restore dependencies
+        run: dotnet restore
+
+      - name: Publish app
+        run: dotnet publish -c Release -o ./publish
+
+      - name: Run EF Core Migrations
         env:
           DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
         run: |
-          if [ -z "$DB_CONNECTION_STRING" ]; then
-            echo "DB_CONNECTION_STRING is not set."
-          else
-            echo "DB_CONNECTION_STRING is set correctly."
-          fi
+          dotnet ef database update --connection "$DB_CONNECTION_STRING"
