--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -6,32 +6,13 @@ on:
       - '*'  
 
 jobs:
-  run-migrations:
+  check-secret:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out the code
         uses: actions/checkout@v4
 
-      - name: Set up .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8' 
-
-      - name: Install EF Core CLI tools
-        run: dotnet tool install --global dotnet-ef
-
-      - name: Add .dotnet tools to PATH
-        run: echo "::add-path::~/.dotnet/tools"
-
-      - name: Restore dependencies
-        run: dotnet restore
-
-      - name: Publish app
-        run: dotnet publish -c Release -o ./publish
-
-      - name: Run EF Core Migrations
+      - name: Verify Secret Existence
         env:
           DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
-        run: |
-          dotnet ef database update --connection "$DB_CONNECTION_STRING"
