--- a/EC-Billing/EC-Billing.csproj
+++ b/EC-Billing/EC-Billing.csproj
@@ -18,5 +18,8 @@
 		<PackageReference Include="xunit" Version="2.9.2" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Views\" />
+	</ItemGroup>
 
 </Project>
