--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -3,16 +3,32 @@ name: Run EF Core Migrations
 on:
   push:
     branches:
-      - '*'  
+      - '*'
 
 jobs:
-  check-secret:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out the code
         uses: actions/checkout@v4
 
-      - name: Verify Secret Existence
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8'
+
+      - name: Install EF Core CLI tools
+        run: dotnet tool install --global dotnet-ef
+
+      - name: Add .dotnet tools to PATH
+        run: echo "::add-path::~/.dotnet/tools"
+
+      - name: Publish app
+        run: dotnet publish -c Release -o ./publish
+
+      - name: Run EF Core Migrations
         env:
           DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
+        run: |
+          dotnet ef database update
