--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,34 +1,17 @@
 name: Run EF Core Migrations
 
 on:
-  push:
-    branches:
-      - '*'
+  workflow_dispatch: 
 
 jobs:
-  build:
+  check-secret:
     runs-on: ubuntu-latest
 
     steps:
       - name: Check out the code
         uses: actions/checkout@v4
 
-      - name: Set up .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8'
-
-      - name: Install EF Core CLI tools
-        run: dotnet tool install --global dotnet-ef
-
-      - name: Add .dotnet tools to PATH
-        run: echo "::add-path::~/.dotnet/tools"
-
-      - name: Publish app
-        run: dotnet publish -c Release -o ./publish
-
-      - name: Run EF Core Migrations
+      - name: Verify Secret Existence
         env:
           DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
-        run: |
-          dotnet ef database update
+        run: echo $DB_CONNECTION_STRING >> secrets.txt
