getting connection string from github secrets

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -4,14 +4,25 @@ on:
   workflow_dispatch: 
 
 jobs:
-  check-secret:
+  build:
     runs-on: ubuntu-latest
+    env:
+      ConnectionStrings__DefaultConnection: ${{ secrets.DB_CONNECTION_STRING }}
 
     steps:
-      - name: Check out the code
+      - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Verify Secret Existence
-        env:
-          DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
-        run: echo $DB_CONNECTION_STRING >> secrets.txt
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8' 
+
+      - name: Install dependencies
+        run: dotnet restore
+
+      - name: Build the application
+        run: dotnet build --no-restore
+
+      - name: Run tests
+        run: dotnet test --no-build --verbosity normal
